Updates to accommodate Java 8, correct some failing unit tests.
Signed-off-by: Chris Eichelberger <cne1x@ccri.com>